--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -57,10 +57,19 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Entities\City.cs" />
+    <Compile Include="Entities\Contract.cs" />
     <Compile Include="Entities\Country.cs" />
+    <Compile Include="Entities\Organization.cs" />
+    <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\Role.cs" />
+    <Compile Include="Entities\Type.cs" />
     <Compile Include="FluentNHibernateHelper.cs" />
     <Compile Include="Mappings\CityMap.cs" />
     <Compile Include="Mappings\CountryMap.cs" />
+    <Compile Include="Mappings\OrganizationMap.cs" />
+    <Compile Include="Mappings\PersonMap.cs" />
+    <Compile Include="Mappings\RoleMap.cs" />
+    <Compile Include="Mappings\TypeMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
