--- a/NhibernateTest/NhibernateTest.csproj
+++ b/NhibernateTest/NhibernateTest.csproj
@@ -4,15 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D74277FE-D8FB-436E-9708-608AA725F509}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{93EF02A8-163A-4803-ADA5-3484F8DECC50}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LeagueAssist</RootNamespace>
-    <AssemblyName>LeagueAssist</AssemblyName>
+    <RootNamespace>NhibernateTest</RootNamespace>
+    <AssemblyName>NhibernateTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -56,23 +60,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Entities\HealthCheckEvidention.cs" />
-    <Compile Include="Entities\License.cs" />
-    <Compile Include="Entities\LicenseEvidention.cs" />
-    <Compile Include="Entities\Penalty.cs" />
-    <Compile Include="Entities\PenaltyEvidention.cs" />
-    <Compile Include="FluentNHibernateHelper.cs" />
-    <Compile Include="Mappings\HealthCheckEvidentionMap.cs" />
-    <Compile Include="Mappings\LicenseEvidentionMap.cs" />
-    <Compile Include="Mappings\LicenseMap.cs" />
-    <Compile Include="Mappings\PenaltyEvidentionMap.cs" />
-    <Compile Include="Mappings\PenaltyMap.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LeagueAssist\LeagueAssist.csproj">
+      <Project>{d74277fe-d8fb-436e-9708-608aa725f509}</Project>
+      <Name>LeagueAssist</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
