--- a/RestApi/Web.config
+++ b/RestApi/Web.config
@@ -13,6 +13,7 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <directoryBrowse enabled="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
