Include klasa u project

--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -64,10 +64,15 @@
     <Compile Include="Entities\HealthCheckEvidention.cs" />
     <Compile Include="Entities\License.cs" />
     <Compile Include="Entities\LicenseEvidention.cs" />
+    <Compile Include="Entities\Match.cs" />
+    <Compile Include="Entities\MatchActivity.cs" />
+    <Compile Include="Entities\MatchPerson.cs" />
+    <Compile Include="Entities\MatchSubstitutions.cs" />
     <Compile Include="Entities\Organization.cs" />
     <Compile Include="Entities\OrgStadium.cs" />
     <Compile Include="Entities\Penalty.cs" />
     <Compile Include="Entities\PenaltyEvidention.cs" />
+    <Compile Include="Entities\PlayerPerformance.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Stadium.cs" />
     <Compile Include="Entities\User.cs" />
@@ -81,10 +86,15 @@
     <Compile Include="Mappings\HealthCheckEvidentionMap.cs" />
     <Compile Include="Mappings\LicenseEvidentionMap.cs" />
     <Compile Include="Mappings\LicenseMap.cs" />
+    <Compile Include="Mappings\MatchActivityMap.cs" />
+    <Compile Include="Mappings\MatchMap.cs" />
+    <Compile Include="Mappings\MatchPersonMap.cs" />
+    <Compile Include="Mappings\MatchSubstitutionsMap.cs" />
     <Compile Include="Mappings\OrganizationMap.cs" />
     <Compile Include="Mappings\OrgStadiumMap.cs" />
     <Compile Include="Mappings\PenaltyEvidentionMap.cs" />
     <Compile Include="Mappings\PenaltyMap.cs" />
+    <Compile Include="Mappings\PlayerPerformanceMap.cs" />
     <Compile Include="Mappings\RoleMap.cs" />
     <Compile Include="Mappings\StadiumMap.cs" />
     <Compile Include="Mappings\UserMap.cs" />
