--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Entities\City.cs" />
     <Compile Include="Entities\Competition.cs" />
+    <Compile Include="Entities\Contract.cs" />
     <Compile Include="Entities\Country.cs" />
     <Compile Include="Entities\HealthCheckEvidention.cs" />
     <Compile Include="Entities\License.cs" />
@@ -72,9 +73,11 @@
     <Compile Include="Entities\OrgStadium.cs" />
     <Compile Include="Entities\Penalty.cs" />
     <Compile Include="Entities\PenaltyEvidention.cs" />
+    <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\PlayerPerformance.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Stadium.cs" />
+    <Compile Include="Entities\Type.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\Fixture.cs" />
     <Compile Include="Entities\OrgCompetition.cs" />
@@ -82,6 +85,7 @@
     <Compile Include="FluentNHibernateHelper.cs" />
     <Compile Include="Mappings\CityMap.cs" />
     <Compile Include="Mappings\CompetitionMap.cs" />
+    <Compile Include="Mappings\ContractMap.cs" />
     <Compile Include="Mappings\CountryMap.cs" />
     <Compile Include="Mappings\HealthCheckEvidentionMap.cs" />
     <Compile Include="Mappings\LicenseEvidentionMap.cs" />
@@ -94,9 +98,11 @@
     <Compile Include="Mappings\OrgStadiumMap.cs" />
     <Compile Include="Mappings\PenaltyEvidentionMap.cs" />
     <Compile Include="Mappings\PenaltyMap.cs" />
+    <Compile Include="Mappings\PersonMap.cs" />
     <Compile Include="Mappings\PlayerPerformanceMap.cs" />
     <Compile Include="Mappings\RoleMap.cs" />
     <Compile Include="Mappings\StadiumMap.cs" />
+    <Compile Include="Mappings\TypeMap.cs" />
     <Compile Include="Mappings\UserMap.cs" />
     <Compile Include="Mappings\FixtureMap.cs" />
     <Compile Include="Mappings\OrgCompetitionMap.cs" />
