--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -116,11 +116,15 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MatchRefereeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\MatchReferee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\LoginResponse.cs" />
+    <Compile Include="Responses\MatchRefereeResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
