First version of backend for mobile application.

--- a/NhibernateTest/App.config
+++ b/NhibernateTest/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -10,9 +10,12 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfTest/Service1/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-                contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfTest/Service1/" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
         </client>
     </system.serviceModel>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
