--- a/WcfTest/App.config
+++ b/WcfTest/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <appSettings>
@@ -14,7 +14,7 @@
       <service name="WcfTest.Service1">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/WcfTest/Service1/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfTest/Service1/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
@@ -26,13 +26,13 @@
               automatically.
           -->
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
         <!-- Metadata Endpoints -->
         <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. --> 
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
@@ -40,7 +40,7 @@
         <behavior>
           <!-- To avoid disclosing metadata information, 
           set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
@@ -50,4 +50,9 @@
     </behaviors>
   </system.serviceModel>
 
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
