--- a/LeagueAssistDesktop/LeagueAssistDesktop.csproj
+++ b/LeagueAssistDesktop/LeagueAssistDesktop.csproj
@@ -76,6 +76,12 @@
     <Compile Include="PregledIDetaljnoDefiniranjeKola.Designer.cs">
       <DependentUpon>PregledIDetaljnoDefiniranjeKola.cs</DependentUpon>
     </Compile>
+    <Compile Include="PregledKlubova.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PregledKlubova.Designer.cs">
+      <DependentUpon>PregledKlubova.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PregledIDetaljnoDefiniranjeKola.resx">
       <DependentUpon>PregledIDetaljnoDefiniranjeKola.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PregledKlubova.resx">
+      <DependentUpon>PregledKlubova.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
