--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="CountryRepository.cs" />
     <Compile Include="Entities\City.cs" />
     <Compile Include="Entities\Competition.cs" />
     <Compile Include="Entities\Contract.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="MatchActions.cs" />
     <Compile Include="MatchDetailInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
