--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -125,6 +125,8 @@
     <Compile Include="MatchActions.cs" />
     <Compile Include="MatchDetailInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeasonProcessor.cs" />
+    <Compile Include="SeasonRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
