--- a/LeagueAssistDesktop/LeagueAssistDesktop.csproj
+++ b/LeagueAssistDesktop/LeagueAssistDesktop.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddingReferee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddingReferee.Designer.cs">
+      <DependentUpon>AddingReferee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddingReferee.resx">
+      <DependentUpon>AddingReferee.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
