--- a/LeagueAssistDesktop/LeagueAssistDesktop.csproj
+++ b/LeagueAssistDesktop/LeagueAssistDesktop.csproj
@@ -62,6 +62,12 @@
     <Compile Include="GeneratorKola.Designer.cs">
       <DependentUpon>GeneratorKola.cs</DependentUpon>
     </Compile>
+    <Compile Include="IzmjenaSudca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IzmjenaSudca.Designer.cs">
+      <DependentUpon>IzmjenaSudca.cs</DependentUpon>
+    </Compile>
     <Compile Include="KreirajNatjecanje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,12 @@
     <Compile Include="UnosStadiona.Designer.cs">
       <DependentUpon>UnosStadiona.cs</DependentUpon>
     </Compile>
+    <Compile Include="UnosSudca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UnosSudca.Designer.cs">
+      <DependentUpon>UnosSudca.cs</DependentUpon>
+    </Compile>
     <Compile Include="UrediKlub.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +165,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GeneratorKola.resx">
       <DependentUpon>GeneratorKola.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IzmjenaSudca.resx">
+      <DependentUpon>IzmjenaSudca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KreirajNatjecanje.resx">
       <DependentUpon>KreirajNatjecanje.cs</DependentUpon>
@@ -198,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UnosStadiona.resx">
       <DependentUpon>UnosStadiona.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UnosSudca.resx">
+      <DependentUpon>UnosSudca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UrediKlub.resx">
       <DependentUpon>UrediKlub.cs</DependentUpon>
