--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="CompetitionProcessor.cs" />
     <Compile Include="CompetitionRepository.cs" />
     <Compile Include="CountryRepository.cs" />
     <Compile Include="DeclareMatchDateReferee.cs" />
