--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CountryRepository.cs" />
     <Compile Include="Entities\City.cs" />
+    <Compile Include="Entities\ClubPlayers.cs" />
     <Compile Include="Entities\Competition.cs" />
     <Compile Include="Entities\Contract.cs" />
     <Compile Include="Entities\Country.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Entities\Season.cs" />
     <Compile Include="FluentNHibernateHelper.cs" />
     <Compile Include="Mappings\CityMap.cs" />
+    <Compile Include="Mappings\ClubPlayersMap.cs" />
     <Compile Include="Mappings\CompetitionMap.cs" />
     <Compile Include="Mappings\ContractMap.cs" />
     <Compile Include="Mappings\CountryMap.cs" />
@@ -128,6 +130,7 @@
     <Compile Include="Mappings\SeasonMap.cs" />
     <Compile Include="MatchActions.cs" />
     <Compile Include="MatchDetailInfo.cs" />
+    <Compile Include="UserProcessor.cs" />
     <Compile Include="MatchProcessor.cs" />
     <Compile Include="MatchRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
