Implemented most of web layouts, new models and controllers.

--- a/LeagueAssistWeb/LeagueAssistWeb.csproj
+++ b/LeagueAssistWeb/LeagueAssistWeb.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\MatchViewModel.cs" />
     <Compile Include="Models\SeasonViewModel.cs" />
     <Compile Include="Models\LeagueViewModel.cs" />
     <Compile Include="Models\ResultsViewModel.cs" />
@@ -289,17 +290,18 @@
     <Content Include="Views\About\Details.cshtml" />
     <Content Include="Views\About\Edit.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\RegisterExistingPlayer.cshtml" />
+    <Content Include="Views\Home\RegisterExistingPlayerSearch.cshtml" />
     <Content Include="Views\Home\RegisterNewPlayer.cshtml" />
     <Content Include="Views\Home\EditPlayer.cshtml" />
     <Content Include="Views\Home\PlayerDetails.cshtml" />
     <Content Include="Views\Home\EndPlayerContract.cshtml" />
     <Content Include="Views\Cup\Index.cshtml" />
     <Content Include="Views\League\Index.cshtml" />
+    <Content Include="Views\Match\Index.cshtml" />
+    <Content Include="Views\Match\SignPlayers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Match\" />
     <Folder Include="Views\Search\" />
   </ItemGroup>
   <ItemGroup>
