--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Entities\HealthCheckEvidention.cs" />
     <Compile Include="Entities\License.cs" />
     <Compile Include="Entities\LicenseEvidention.cs" />
+    <Compile Include="Entities\ListOfMatch.cs" />
     <Compile Include="Entities\ListOfPlayers.cs" />
     <Compile Include="Entities\Match.cs" />
     <Compile Include="Entities\MatchActivity.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Mappings\HealthCheckEvidentionMap.cs" />
     <Compile Include="Mappings\LicenseEvidentionMap.cs" />
     <Compile Include="Mappings\LicenseMap.cs" />
+    <Compile Include="Mappings\ListOfMatchMap.cs" />
     <Compile Include="Mappings\ListOfPlayersMap.cs" />
     <Compile Include="Mappings\MatchActivityMap.cs" />
     <Compile Include="Mappings\MatchActivityPlayersMap.cs" />
