--- a/LeagueAssistDesktop/LeagueAssistDesktop.csproj
+++ b/LeagueAssistDesktop/LeagueAssistDesktop.csproj
@@ -74,6 +74,12 @@
     <Compile Include="IzmjenaSudca.Designer.cs">
       <DependentUpon>IzmjenaSudca.cs</DependentUpon>
     </Compile>
+    <Compile Include="LicencaSudac.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LicencaSudac.Designer.cs">
+      <DependentUpon>LicencaSudac.cs</DependentUpon>
+    </Compile>
     <Compile Include="LicenceKlubIspis.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,17 +92,35 @@
     <Compile Include="LicenceSudciIspis.Designer.cs">
       <DependentUpon>LicenceSudciIspis.cs</DependentUpon>
     </Compile>
+    <Compile Include="LicenseClub.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LicenseClub.Designer.cs">
+      <DependentUpon>LicenseClub.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PopisKlubovaILicence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopisKlubovaILicence.Designer.cs">
+      <DependentUpon>PopisKlubovaILicence.cs</DependentUpon>
+    </Compile>
     <Compile Include="PopisSudacaILicenci.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PopisSudacaILicenci.Designer.cs">
       <DependentUpon>PopisSudacaILicenci.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PopisSudciLicence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopisSudciLicence.Designer.cs">
+      <DependentUpon>PopisSudciLicence.cs</DependentUpon>
     </Compile>
     <Compile Include="PregledIDetaljnoDefiniranjeKola.cs">
       <SubType>Form</SubType>
@@ -190,17 +214,29 @@
     <EmbeddedResource Include="IzmjenaSudca.resx">
       <DependentUpon>IzmjenaSudca.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LicencaSudac.resx">
+      <DependentUpon>LicencaSudac.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LicenceKlubIspis.resx">
       <DependentUpon>LicenceKlubIspis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LicenceSudciIspis.resx">
       <DependentUpon>LicenceSudciIspis.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LicenseClub.resx">
+      <DependentUpon>LicenseClub.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PopisKlubovaILicence.resx">
+      <DependentUpon>PopisKlubovaILicence.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PopisSudacaILicenci.resx">
       <DependentUpon>PopisSudacaILicenci.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PopisSudciLicence.resx">
+      <DependentUpon>PopisSudciLicence.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PregledIDetaljnoDefiniranjeKola.resx">
       <DependentUpon>PregledIDetaljnoDefiniranjeKola.cs</DependentUpon>
