--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -73,12 +73,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CityProcessor.cs" />
-    <Compile Include="CityRepository.cs" />
+    <Compile Include="Processors\CityProcessor.cs" />
+    <Compile Include="Repositories\CityRepository.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="CompetitionProcessor.cs" />
-    <Compile Include="CompetitionRepository.cs" />
-    <Compile Include="CountryRepository.cs" />
+    <Compile Include="Processors\CompetitionProcessor.cs" />
+    <Compile Include="Repositories\CompetitionRepository.cs" />
+    <Compile Include="Repositories\CountryRepository.cs" />
     <Compile Include="DeclareMatchDateReferee.cs" />
     <Compile Include="Entities\City.cs" />
     <Compile Include="Entities\ClubInfo.cs" />
@@ -116,8 +116,8 @@
     <Compile Include="Entities\OrgCompetition.cs" />
     <Compile Include="Entities\Season.cs" />
     <Compile Include="FluentNHibernateHelper.cs" />
-    <Compile Include="LicenseProcessor.cs" />
-    <Compile Include="LicenseRepository.cs" />
+    <Compile Include="Processors\LicenseProcessor.cs" />
+    <Compile Include="Repositories\LicenseRepository.cs" />
     <Compile Include="Mappings\CityMap.cs" />
     <Compile Include="Mappings\ClubInfoMap.cs" />
     <Compile Include="Mappings\ClubPlayersMap.cs" />
@@ -155,31 +155,28 @@
     <Compile Include="Mappings\SeasonMap.cs" />
     <Compile Include="MatchActions.cs" />
     <Compile Include="MatchDetailInfo.cs" />
-    <Compile Include="ClubProcessor.cs" />
-    <Compile Include="PlayerProcessor.cs" />
-    <Compile Include="PlayerRepository.cs" />
-    <Compile Include="MatchProcessor.cs" />
-    <Compile Include="MatchRepository.cs" />
+    <Compile Include="Processors\ClubProcessor.cs" />
+    <Compile Include="Processors\PlayerProcessor.cs" />
+    <Compile Include="Repositories\PlayerRepository.cs" />
+    <Compile Include="Processors\MatchProcessor.cs" />
+    <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="OrganizationProcessor.cs" />
-    <Compile Include="OrganizationRepository.cs" />
+    <Compile Include="Repositories\OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SeasonProcessor.cs" />
-    <Compile Include="SeasonRepository.cs" />
-    <Compile Include="UserProcessor.cs" />
-    <Compile Include="StadiumProcessor.cs" />
-    <Compile Include="StadiumRepository.cs" />
-    <Compile Include="ClubRepository.cs" />
-    <Compile Include="UserRepository.cs" />
+    <Compile Include="Processors\SeasonProcessor.cs" />
+    <Compile Include="Repositories\SeasonRepository.cs" />
+    <Compile Include="Processors\UserProcessor.cs" />
+    <Compile Include="Processors\StadiumProcessor.cs" />
+    <Compile Include="Repositories\StadiumRepository.cs" />
+    <Compile Include="Repositories\ClubRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Processors\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
