--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -75,7 +75,7 @@
   <ItemGroup>
     <Compile Include="CityProcessor.cs" />
     <Compile Include="CityRepository.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="SessionFactory.cs" />
     <Compile Include="CompetitionProcessor.cs" />
     <Compile Include="CompetitionRepository.cs" />
     <Compile Include="CountryRepository.cs" />
@@ -168,6 +168,10 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagram3.cd" />
+    <None Include="ClassDiagram4.cd" />
+    <None Include="ClassDiagram5.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
