--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -73,7 +73,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ClubLicence.cs" />
     <Compile Include="Entities\RefereeLicence.cs" />
+    <Compile Include="Mappings\ClubLicenceMap.cs" />
     <Compile Include="Mappings\RefereeLicenceMap.cs" />
     <Compile Include="Processors\CityProcessor.cs" />
     <Compile Include="Repositories\CityRepository.cs" />
