free players changes, signing players for matches, login fix, minor modifications..

--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -74,8 +74,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\ClubLicence.cs" />
+    <Compile Include="Entities\FreePlayers.cs" />
     <Compile Include="Entities\RefereeLicence.cs" />
     <Compile Include="Mappings\ClubLicenceMap.cs" />
+    <Compile Include="Mappings\FreePlayersMap.cs" />
     <Compile Include="Mappings\RefereeLicenceMap.cs" />
     <Compile Include="Processors\CityProcessor.cs" />
     <Compile Include="Repositories\CityRepository.cs" />
