--- a/LeagueAssist/LeagueAssist.csproj
+++ b/LeagueAssist/LeagueAssist.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Repositories\PlayerRepository.cs" />
     <Compile Include="Processors\MatchProcessor.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
-    <Compile Include="OrganizationProcessor.cs" />
+    <Compile Include="Processors\OrganizationProcessor.cs" />
     <Compile Include="Repositories\OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Processors\SeasonProcessor.cs" />
