--- a/LeagueAssistWeb/LeagueAssistWeb.csproj
+++ b/LeagueAssistWeb/LeagueAssistWeb.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\FixtureResultViewModel.cs" />
     <Compile Include="Models\MatchViewModel.cs" />
     <Compile Include="Models\SeasonViewModel.cs" />
     <Compile Include="Models\LeagueViewModel.cs" />
